--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lucide-react": "^0.488.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
+    "octokit": "^5.0.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -75,6 +76,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "usehooks-ts": "^3.1.1",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
