--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@clerk/nextjs": "^6.14.3",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^6.5.0",
+    "@langchain/community": "^0.3.46",
+    "@langchain/core": "^0.3.59",
+    "@prisma/client": "^6.10.1",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-aspect-ratio": "^1.1.3",
@@ -62,6 +64,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ignore": "^5.3.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
     "next": "^15.2.3",
@@ -93,7 +96,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.6.0",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
