--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-md-editor": "^4.0.8",
     "ai": "^4.3.19",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -77,6 +79,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
