--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@uiw/react-md-editor": "^4.0.8",
     "ai": "^4.3.19",
+    "assemblyai": "^4.14.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase": "^12.0.0",
     "ignore": "^5.3.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
@@ -75,8 +77,10 @@
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.55.0",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.6.1",
