--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
+    "razorpay": "^2.9.6",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.2.0",
     "react-day-picker": "^8.10.1",
