--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.0.0",
+    "groq-sdk": "^0.37.0",
     "ignore": "^5.3.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
